--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: Jesse's Theme
-Theme URI: https://www.jessehanley.com
-Author: Jesse Hanley
-Author URI: https://www.jessehanley.com
+Theme Name: Maliek's Theme
+Theme URI: https://www.adball.online
+Author: Jesse News
+Author URI: https://www.adball.online
 Description: An AMP and mobile-first, lightweight responsive theme for 2016.
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: light, flexible-width, responsive, mobile-first
-Text Domain: jessehanley
+Text Domain: adball
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
